Kubernetes/webapp-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    myapp: gandalf
spec:
  replicas: 2
  selector:
    matchLabels:                                                                 # labels for pods in this deployment
      myapp: gandalf
  template:
    metadata:
      labels:
        myapp: gandalf
    spec:
      containers:
      - name: gandalf
        image: 891377389582.dkr.ecr.ap-south-1.amazonaws.com/myapp:latest        # Image of webapp in ECR
        ports:
        - containerPort: 80                                                     
        readinessProbe:                                                          # Health Probes
          tcpSocket:
             port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
