Kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    myapp: gandalf
spec:
  replicas: 2
  selector:
    matchLabels:                                                                 # labels for pods in this deployment
      myapp: gandalf
  template:
    metadata:
      labels:
        myapp: gandalf
    spec:
      containers:
      - name: gandalf
        image: 891377389582.dkr.ecr.ap-south-1.amazonaws.com/mywebappecr:latest  # Image of webapp in ECR
        ports:
        - containerPort: 80
        readinessProbe:                                                          # Health Probes
          tcpSocket:
             port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10


---

apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  labels:
    discover: prom                    # service label, used for service discovery for prometheus          
spec:
  selector:
    myapp: gandalf                    # Labels for deployment selection  
  ports:
    - name: webappport
      port: 80
      targetPort: 80
