Kubernetes/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: mywebappingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"      
spec:
  rules:
    - http:
        paths:
          - path: /grafana                    
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana                   # ServiceName to send request to
                port:                                      # Port to send request to
                  number: 80
          - path: /prometheus                 
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus # ServiceName to send request to
                port:
                  number: 9090                              # Port to send request to
