Kubernetes/ingress-webapp-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebappingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static                   # Based on this path
            pathType: Prefix
            backend:
              service:
                name: web-app-service       # ServiceName to send request to
                port:
                  number: 80                # Port to send request to
          - path: /gandalf                  # Based on this path
            pathType: Prefix
            backend:
              service:
                name: web-app-service       # ServiceName to send request to
                port:
                  number: 80                # Port to send request to
          - path: /colombo                  # Based on this path
            pathType: Prefix
            backend:
              service:
                name: web-app-service       # ServiceName to send request to
                port:
                  number: 80                # Port to send request to
